--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,94 @@ a {
 * {
   box-sizing: border-box;
 }
+
+nav {
+  position: relative;
+  background-color: rgb(214, 213, 213);
+}
+
+nav > ul {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+nav > ul li {
+  display: inline-block;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 5px;
+}
+
+nav > button {
+  position: absolute;
+  right: 10px;
+  top: -5px;
+}
+
+.active {
+  box-shadow: gray 0 0 0 1px;
+  border-radius: 4px;
+}
+
+@keyframes load {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+button {
+  margin: 5px;
+  height: 30px;
+  border-radius: 5px;
+  font-size: 1.2em;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: rgb(228, 228, 228);
+}
+
+/* .add {
+  background-color: rgb(41, 251, 4);
+}
+
+.sub {
+  background-color: rgb(255, 10, 10);
+} */
+
+div {
+  width: 100%;
+  text-align: center;
+}
+
+.elements {
+  width: 60px;
+  height: 60px;
+  line-height: 60px;
+  color: whitesmoke;
+  font-size: 2em;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgb(57, 89, 231);
+}
+
+.elementsRl {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 1em;
+  border-radius: 50%;
+  color: whitesmoke;
+  background-color: rgb(248, 7, 7);
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
